--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,5 @@ Computer Science and Engineering Department https://www.inf.uc3m.es/en
 Universidad Carlos III de Madrid https://www.uc3m.es/home
 
 Ian Herman <iankherman@gmail.com>
-University of Hawaii at Hilo https://hilo.hawaii.edu/
+Computer Science and Engineering Department https://www.inf.uc3m.es/en
+Universidad Carlos III de Madrid https://www.uc3m.es/home
