New results in the n-pancake/unit brute-force

--- a/scripts/plotter/results/n-pancake/unit/10/10pancake.brute-force.mem.tex
+++ b/scripts/plotter/results/n-pancake/unit/10/10pancake.brute-force.mem.tex
@@ -3,5 +3,5 @@
 Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 \\ \midrule
 BELA$_0$ & 4984.12 & \textbf{4974.63} & \textbf{5100.60} & \textbf{5106.52} & \textbf{5105.15} & \textbf{5108.29} \\
 K$_0$ & 24279.74 & 25189.48 & 25430.95 & 25461.47 & 25476.73 & -- \\
-mDijkstra & \textbf{4349.86} & 6427.79 & 8683.10 & -- & -- & -- \\ \bottomrule 
+mDijkstra & \textbf{4349.83} & 6427.34 & 8682.98 & 11608.40 & 14737.69 & -- \\ \bottomrule 
 \end{tabular}
