--- a/scripts/plotter/results/n-pancake/unit/20/20pancake.heuristic.mem.tex
+++ b/scripts/plotter/results/n-pancake/unit/20/20pancake.heuristic.mem.tex
@@ -1,7 +1,7 @@
-\begin{tabular}{c|cccccccccccc}\toprule
-\multicolumn{13}{c}{Memory (Mbytes) - 20-Pancake unit}\\ \midrule
-Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=40 & k=50 & k=100 & k=500 & k=900 & k=1000 \\ \midrule
-BELA$^*$ & 43.76 & \textbf{53.60} & \textbf{65.29} & \textbf{83.94} & \textbf{130.96} & \textbf{120.74} & \textbf{228.67} & \textbf{238.00} & \textbf{594.86} & \textbf{1754.66} & \textbf{2811.03} & \textbf{2812.03} \\
-K$^*$ & 128.88 & 23910.57 & 36834.92 & 39387.00 & 42481.35 & 42565.51 & -- & -- & -- & -- & -- & -- \\
-mA$^*$ & \textbf{43.07} & 66.10 & 72.75 & 86.99 & 141.11 & 300.14 & 463.26 & 507.63 & 1003.06 & 3305.91 & 6060.71 & 6700.59 \\ \bottomrule 
+\begin{tabular}{c|ccccccccccccc}\toprule
+\multicolumn{14}{c}{Memory (Mbytes) - 20-Pancake unit}\\ \midrule
+Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=20 & k=40 & k=50 & k=100 & k=500 & k=900 & k=1000 \\ \midrule
+BELA$^*$ & 43.76 & \textbf{53.60} & \textbf{65.29} & \textbf{83.94} & \textbf{130.96} & \textbf{120.74} & \textbf{209.40} & \textbf{228.67} & \textbf{238.00} & \textbf{594.86} & \textbf{1754.66} & \textbf{2811.03} & \textbf{2812.03} \\
+K$^*$ & 128.88 & 23910.57 & 36834.92 & 39387.00 & 42481.35 & 42565.51 & -- & -- & -- & -- & -- & -- & -- \\
+mA$^*$ & \textbf{43.07} & 66.10 & 72.75 & 86.99 & 141.11 & 300.14 & 308.45 & 463.26 & 507.63 & 1003.06 & 3305.91 & 6060.71 & 6700.59 \\ \bottomrule 
 \end{tabular}
