--- a/scripts/plotter/results/n-pancake/unit/30/30pancake.heuristic.runtime.tex
+++ b/scripts/plotter/results/n-pancake/unit/30/30pancake.heuristic.runtime.tex
@@ -1,7 +1,7 @@
-\begin{tabular}{c|ccccccccccc}\toprule
-\multicolumn{12}{c}{Runtime (seconds) - 30-Pancake unit}\\ \midrule
-Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=40 & k=50 & k=100 & k=500 & k=900 \\ \midrule
-BELA$^*$ & 0.05 & \textbf{0.08} & \textbf{0.11} & \textbf{0.13} & \textbf{0.16} & \textbf{0.28} & \textbf{0.66} & \textbf{0.74} & \textbf{1.24} & \textbf{3.47} & \textbf{4.49} \\
-K$^*$ & 0.41 & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- \\
-mA$^*$ & \textbf{0.05} & 0.09 & 0.12 & 0.14 & 0.18 & 0.30 & 0.85 & 0.99 & 1.70 & 7.36 & -- \\ \bottomrule 
+\begin{tabular}{c|cccccccccccc}\toprule
+\multicolumn{13}{c}{Runtime (seconds) - 30-Pancake unit}\\ \midrule
+Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=20 & k=40 & k=50 & k=100 & k=500 & k=900 \\ \midrule
+BELA$^*$ & 0.05 & \textbf{0.08} & \textbf{0.11} & \textbf{0.13} & \textbf{0.16} & \textbf{0.28} & \textbf{0.43} & \textbf{0.66} & \textbf{0.74} & \textbf{1.24} & \textbf{3.47} & \textbf{4.49} \\
+K$^*$ & 0.41 & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- \\
+mA$^*$ & \textbf{0.05} & 0.09 & 0.12 & 0.14 & 0.18 & 0.30 & 0.48 & 0.85 & 0.99 & 1.70 & 7.36 & -- \\ \bottomrule 
 \end{tabular}
