--- a/scripts/plotter/results/n-pancake/unit/40/40pancake.heuristic.expansions.tex
+++ b/scripts/plotter/results/n-pancake/unit/40/40pancake.heuristic.expansions.tex
@@ -1,7 +1,7 @@
-\begin{tabular}{c|ccccccc}\toprule
-\multicolumn{8}{c}{Number of expansions - 40-Pancake unit}\\ \midrule
-Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=40 \\ \midrule
-BELA$^*$ & \textbf{60967.15} & \textbf{92890.58} & \textbf{127932.52} & \textbf{157109.89} & \textbf{178490.21} & \textbf{278710.47} & \textbf{702102.51} \\
-K$^*$ & 88682.66 & -- & -- & -- & -- & -- & -- \\
-mA$^*$ & \textbf{60967.15} & 94289.65 & 136928.29 & 174598.55 & 202870.34 & 328252.54 & -- \\ \bottomrule 
+\begin{tabular}{c|cccccccc}\toprule
+\multicolumn{9}{c}{Number of expansions - 40-Pancake unit}\\ \midrule
+Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=20 & k=40 \\ \midrule
+BELA$^*$ & \textbf{60967.15} & \textbf{92890.58} & \textbf{127932.52} & \textbf{157109.89} & \textbf{178490.21} & \textbf{278710.47} & \textbf{422505.16} & \textbf{702102.51} \\
+K$^*$ & 88682.66 & -- & -- & -- & -- & -- & -- & -- \\
+mA$^*$ & \textbf{60967.15} & 94289.65 & 136928.29 & 174598.55 & 202870.34 & 328252.54 & 525144.21 & -- \\ \bottomrule 
 \end{tabular}
