--- a/scripts/plotter/results/n-pancake/unit/40/40pancake.heuristic.mem.tex
+++ b/scripts/plotter/results/n-pancake/unit/40/40pancake.heuristic.mem.tex
@@ -1,7 +1,7 @@
-\begin{tabular}{c|ccccccc}\toprule
-\multicolumn{8}{c}{Memory (Mbytes) - 40-Pancake unit}\\ \midrule
-Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=40 \\ \midrule
-BELA$^*$ & 5778.10 & 8969.52 & \textbf{15938.05} & \textbf{15931.72} & \textbf{16131.12} & \textbf{19000.14} & \textbf{38396.69} \\
-K$^*$ & 25859.42 & -- & -- & -- & -- & -- & -- \\
-mA$^*$ & \textbf{5677.61} & \textbf{8258.90} & 17701.00 & 17780.14 & 19042.80 & 23489.86 & -- \\ \bottomrule 
+\begin{tabular}{c|cccccccc}\toprule
+\multicolumn{9}{c}{Memory (Mbytes) - 40-Pancake unit}\\ \midrule
+Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=20 & k=40 \\ \midrule
+BELA$^*$ & 5778.10 & 8969.52 & \textbf{15938.05} & \textbf{15931.72} & \textbf{16131.12} & \textbf{19000.14} & \textbf{22701.99} & \textbf{38396.69} \\
+K$^*$ & 25859.42 & -- & -- & -- & -- & -- & -- & -- \\
+mA$^*$ & \textbf{5677.61} & \textbf{8258.90} & 17701.00 & 17780.14 & 19042.80 & 23489.86 & 28206.66 & -- \\ \bottomrule 
 \end{tabular}
