--- a/scripts/plotter/results/n-pancake/unit/10/10pancake.brute-force.runtime.tex
+++ b/scripts/plotter/results/n-pancake/unit/10/10pancake.brute-force.runtime.tex
@@ -3,5 +3,5 @@
 Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 \\ \midrule
 BELA$_0$ & 17.29 & \textbf{19.42} & \textbf{20.68} & \textbf{21.04} & \textbf{21.66} & \textbf{23.17} \\
 K$_0$ & 60.37 & 82.08 & 87.25 & 89.10 & 89.84 & -- \\
-mDijkstra & \textbf{15.88} & 36.90 & 58.38 & -- & -- & -- \\ \bottomrule 
+mDijkstra & \textbf{12.38} & 28.87 & 45.65 & 60.14 & 76.02 & -- \\ \bottomrule 
 \end{tabular}
