--- a/scripts/plotter/results/n-pancake/unit/20/20pancake.heuristic.nbcentroids.tex
+++ b/scripts/plotter/results/n-pancake/unit/20/20pancake.heuristic.nbcentroids.tex
@@ -1,7 +1,7 @@
-\begin{tabular}{c|cccccccccccc}\toprule
-\multicolumn{13}{c}{Number of centroids - 20-Pancake unit}\\ \midrule
-Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=40 & k=50 & k=100 & k=500 & k=900 & k=1000 \\ \midrule
-BELA$^*$ & \textbf{1.00} & \textbf{1.99} & \textbf{2.99} & \textbf{3.98} & \textbf{4.95} & \textbf{9.79} & \textbf{37.54} & \textbf{46.17} & \textbf{84.97} & \textbf{320.75} & \textbf{524.78} & \textbf{578.92} \\
-K$^*$ & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- \\
-mA$^*$ & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- \\ \bottomrule 
+\begin{tabular}{c|ccccccccccccc}\toprule
+\multicolumn{14}{c}{Number of centroids - 20-Pancake unit}\\ \midrule
+Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=20 & k=40 & k=50 & k=100 & k=500 & k=900 & k=1000 \\ \midrule
+BELA$^*$ & \textbf{1.00} & \textbf{1.99} & \textbf{2.99} & \textbf{3.98} & \textbf{4.95} & \textbf{9.79} & \textbf{19.29} & \textbf{37.54} & \textbf{46.17} & \textbf{84.97} & \textbf{320.75} & \textbf{524.78} & \textbf{578.92} \\
+K$^*$ & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- \\
+mA$^*$ & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- & -- \\ \bottomrule 
 \end{tabular}
