--- a/scripts/plotter/results/n-pancake/unit/20/20pancake.heuristic.runtime.tex
+++ b/scripts/plotter/results/n-pancake/unit/20/20pancake.heuristic.runtime.tex
@@ -1,7 +1,7 @@
-\begin{tabular}{c|cccccccccccc}\toprule
-\multicolumn{13}{c}{Runtime (seconds) - 20-Pancake unit}\\ \midrule
-Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=40 & k=50 & k=100 & k=500 & k=900 & k=1000 \\ \midrule
-BELA$^*$ & 0.00 & \textbf{0.00} & \textbf{0.01} & \textbf{0.01} & \textbf{0.01} & \textbf{0.01} & \textbf{0.04} & \textbf{0.04} & \textbf{0.07} & \textbf{0.24} & \textbf{0.38} & \textbf{0.43} \\
-K$^*$ & 0.02 & 1.44 & 1.77 & 2.65 & 2.91 & 4.83 & -- & -- & -- & -- & -- & -- \\
-mA$^*$ & \textbf{0.00} & 0.00 & 0.01 & 0.01 & 0.01 & 0.02 & 0.05 & 0.06 & 0.12 & 0.54 & 0.96 & 1.05 \\ \bottomrule 
+\begin{tabular}{c|ccccccccccccc}\toprule
+\multicolumn{14}{c}{Runtime (seconds) - 20-Pancake unit}\\ \midrule
+Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=20 & k=40 & k=50 & k=100 & k=500 & k=900 & k=1000 \\ \midrule
+BELA$^*$ & 0.00 & \textbf{0.00} & \textbf{0.01} & \textbf{0.01} & \textbf{0.01} & \textbf{0.01} & \textbf{0.02} & \textbf{0.04} & \textbf{0.04} & \textbf{0.07} & \textbf{0.24} & \textbf{0.38} & \textbf{0.43} \\
+K$^*$ & 0.02 & 1.44 & 1.77 & 2.65 & 2.91 & 4.83 & -- & -- & -- & -- & -- & -- & -- \\
+mA$^*$ & \textbf{0.00} & 0.00 & 0.01 & 0.01 & 0.01 & 0.02 & 0.03 & 0.05 & 0.06 & 0.12 & 0.54 & 0.96 & 1.05 \\ \bottomrule 
 \end{tabular}
