--- a/scripts/plotter/results/n-pancake/unit/40/40pancake.heuristic.runtime.tex
+++ b/scripts/plotter/results/n-pancake/unit/40/40pancake.heuristic.runtime.tex
@@ -1,7 +1,7 @@
-\begin{tabular}{c|ccccccc}\toprule
-\multicolumn{8}{c}{Runtime (seconds) - 40-Pancake unit}\\ \midrule
-Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=40 \\ \midrule
-BELA$^*$ & 0.61 & \textbf{0.92} & \textbf{1.19} & \textbf{1.48} & \textbf{1.72} & \textbf{2.89} & \textbf{7.16} \\
-K$^*$ & 6.12 & -- & -- & -- & -- & -- & -- \\
-mA$^*$ & \textbf{0.60} & 0.92 & 1.27 & 1.64 & 1.90 & 3.19 & -- \\ \bottomrule 
+\begin{tabular}{c|cccccccc}\toprule
+\multicolumn{9}{c}{Runtime (seconds) - 40-Pancake unit}\\ \midrule
+Algorithm & k=1 & k=2 & k=3 & k=4 & k=5 & k=10 & k=20 & k=40 \\ \midrule
+BELA$^*$ & 0.61 & \textbf{0.92} & \textbf{1.19} & \textbf{1.48} & \textbf{1.72} & \textbf{2.89} & \textbf{4.50} & \textbf{7.16} \\
+K$^*$ & 6.12 & -- & -- & -- & -- & -- & -- & -- \\
+mA$^*$ & \textbf{0.60} & 0.92 & 1.27 & 1.64 & 1.90 & 3.19 & 5.30 & -- \\ \bottomrule 
 \end{tabular}
